<resources>
    <string name="app_name">Blood Life</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="blood_type">Blood Type</string>
    <string name="location">Location</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="required_blood_type">Required Blood Type</string>
    <string name="urgency_level">Urgency Level</string>
    <string name="submit_request">Submit Request</string>

    <string-array name="drawerItems">
        <item>Home</item>
        <item>Blood Request Management</item>
        <item>Blood Availability</item>
        <item>Appointment Scheduling</item>
        <item>Blood Donation History</item>
        <item>Educational Resources</item>
        <item>Feedbacks &amp; Ratings</item>
    </string-array>
</resources>