<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginFragment">
            
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/requiredTypeET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/required_blood_type"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/medium_neutral_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/urgencyLevelET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/urgency_level"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/medium_neutral_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/requiredTypeET"
                app:layout_constraintStart_toStartOf="@id/requiredTypeET"
                app:layout_constraintTop_toBottomOf="@id/requiredTypeET" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneNumberET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/medium_neutral_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/requiredTypeET"
                app:layout_constraintStart_toStartOf="@id/requiredTypeET"
                app:layout_constraintTop_toBottomOf="@id/urgencyLevelET" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/medium_neutral_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/requiredTypeET"
                app:layout_constraintStart_toStartOf="@id/requiredTypeET"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberET" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/locationET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/location"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/medium_neutral_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/requiredTypeET"
                app:layout_constraintStart_toStartOf="@id/requiredTypeET"
                app:layout_constraintTop_toBottomOf="@id/emailET" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInBT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:text="@string/submit_request"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/urgencyLevelET"
                app:layout_constraintStart_toStartOf="@id/urgencyLevelET"
                app:layout_constraintTop_toBottomOf="@id/locationET" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
